Update README.md with Mapping and ORA analysis documentation